# libmcp2221

examples/adc/: Makefile  main.c
examples/bunch_of_stuff/: Makefile  main.c
examples/dac/: Makefile  main.c
examples/gpio/: Makefile  main.c
examples/i2c/: Makefile  main.c
examples/interrupt/: Makefile  main.c
libmcp2221/: Makefile.am  configure.ac
libmcp2221/pc/: libmcp2221.pc
